--- a/templates/publish-embed.twig
+++ b/templates/publish-embed.twig
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <p class="lead" style="margin:0">Gerar o código do spiffy</p>
+    <p class="lead" style="margin:0">Embed chart</p>
 </div>
 <div class="modal-body">
     <div class="row">
@@ -8,28 +8,28 @@
             <i class="big fa fa-code"></i>
         </div>
         <div class="loading">
-            Publicando o infográfico. Aguarde 1 minuto...
+            Generating embed code, please stand by…
         </div>
         <div class="error hidden">
             Erro ao publicar o infográfico. Tente novamente.
         </div>
         <div class="span4 codes" style="display:none;">
             <div class="span4">
-                <p>Copie os códigos abaixo</p>
-                <label>Para o spiffy (Textile):</label>
+                <p>Copy the embed code you need:</p>
+                <label>Textile</label>
                 <textarea id="textileArea" class="span4" readonly></textarea>
             </div>
             <div class="span4">
-                <label>Para outros (HTML):</label>
+                <label>HTML</label>
                 <textarea id="htmlArea" class="span4" readonly></textarea>
             </div>
             <div class="span4">
-                <label>URL:</label>
+                <label>URL</label>
                 <textarea id="urlArea" class="span4" readonly></textarea>
             </div>
         </div>
     </div>
 </div>
 <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">Fechar</button>
+    <button class="btn" data-dismiss="modal" aria-hidden="true">OK</button>
 </div>
