Made all strings translatable

--- a/templates/publish-embed.twig
+++ b/templates/publish-embed.twig
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <p class="lead" style="margin:0">Embed chart</p>
+    <p class="lead" style="margin:0">{% trans "Embed chart" %}</p>
 </div>
 <div class="modal-body">
     <div class="row">
@@ -8,28 +8,28 @@
             <i class="big fa fa-code"></i>
         </div>
         <div class="loading">
-            Generating embed code, please stand by…
+            {% trans "Generating embed code, please stand by..." %}
         </div>
         <div class="error hidden">
-            Erro ao publicar o infográfico. Tente novamente.
+            {% trans "Unable to publish diagram. Please try again." %}
         </div>
         <div class="span4 codes" style="display:none;">
             <div class="span4">
-                <p>Copy the embed code you need:</p>
-                <label>Textile</label>
+                <p>{% trans "Copy the embed code you need:" %}</p>
+                <label>{% trans "Textile" %}</label>
                 <textarea id="textileArea" class="span4" readonly></textarea>
             </div>
             <div class="span4">
-                <label>HTML</label>
+                <label>{% trans "HTML" %}</label>
                 <textarea id="htmlArea" class="span4" readonly></textarea>
             </div>
             <div class="span4">
-                <label>URL</label>
+                <label>{% trans "URL" %}</label>
                 <textarea id="urlArea" class="span4" readonly></textarea>
             </div>
         </div>
     </div>
 </div>
 <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">OK</button>
+    <button class="btn" data-dismiss="modal" aria-hidden="true">{% trans "OK" %}</button>
 </div>
